[metadata]
name = HAL-CA1006-Brad-Keifer
version = 0.0.1
author = Brad Keifer
author_email = bradkeifer@icloud.com
description = Protocol support for the HAL CA1006 multi-zone amplifier
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bradkeifer/HAL-CA1006
project_urls =
    Bug Tracker = https://github.com/bradkeifer/HAL-CA1006/issues
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
